# YK_Engine

Common/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  CommonConstants.h  Engine.cpp  Engine.h  Environment.h  FBO.cpp  Light.h  Mesh.cpp  Mesh.h  OBJReader.cpp  Object.cpp  Object.h  SceneBase.cpp  SceneBase.h  Shader.cpp  Shader.h  TestScene.cpp  TestScene.h  TextureManager.cpp  TextureManager.h  TextureObject.cpp  TextureObject.h  UBO.cpp  UBO.h  VAOManager.cpp  VAOManager.h  VBOManager.h  main.cpp
Common/GUI/: CurrentCameraInfoContent.cpp  CurrentCameraInfoContent.h  EngineInfo.cpp  EngineInfo.h  EngineInfoContent.cpp  GUIContent.h  GUIManager.cpp  GUIObject.h  GUIWindow.cpp  GUIWindow.h  LightDetailContent.cpp  LightDetailContent.h  LightListContent.cpp  LightListContent.h  ObjectDetailContent.cpp  ObjectDetailContent.h  ObjectListContent.cpp  ObjectListContent.h
Common/Input/: InputManager.h
Common/ObjectComponents/: ComponentBase.h  ComponentManager.h  ComponentManager.inl
Common/build_files/: Common_packages.cmake  Common_target.cmake
Common/data/shaders/: DeferredPBR.frag  DeferredPBR.vert  DeferredPhong.frag  DeferredPhong.vert  DiffuseShader.vert  FaceNormalFragmentShader.frag  FaceNormalVertexShader.vert  PhongLighting.vert  QuadFragmentShader.frag  QuadVertexShader.vert  SimpleFragmentShader.frag  SimpleLineVertexShader.vert  SimpleVertexShader.vert
Common/data/shaders/EngineShader/: Combine.frag  DebugShader.vert  DeferredRender.frag  DeferredRender.vert  DiffuseShader.frag  DiffuseShader.vert  FSQ.frag  FSQ.vert  SSR.frag  SSR.vert
Common/data/shaders/TestShaders/: Default.vert
Common/data/textures/: black.ppm
Common/engine/: Engine.cpp  Engine.h  common_constants.h  engine.cpp  engine.h  main.cpp
Common/engine/GUI/: ColorSet.h  CurrentCameraInfoContent.cpp  CurrentCameraInfoContent.h  EngineInfo.cpp  EngineInfoContent.cpp  EngineInfoContent.h  FBODebugContent.cpp  FBODebugContent.h  GUIContent.h  GUIManager.cpp  GUIManager.h  GUIObject.h  GUIWindow.cpp  GUIWindow.h  LightDetailContent.cpp  LightDetailContent.h  LightListContent.cpp  ObjectDetailContent.cpp  ObjectDetailContent.h  ObjectListContent.cpp  ObjectListContent.h  TextureContent.cpp  TextureContent.h
Common/engine/graphic_misc/: Color.h  Environment.h  FBO.cpp  FBO.h  Mesh.cpp  Mesh.h  OBJReader.cpp  OBJReader.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  TextureObject.cpp  TextureObject.h  UBO.cpp  UBO.h  VAOManager.cpp  VAOManager.h  VBOManager.cpp  VBOManager.h
Common/engine/graphic_misc/BoundingVolume/: BasicBoundingVolumes.cpp  BasicBoundingVolumes.h  ColliderTypes.h
Common/engine/input/: InputManager.cpp  InputManager.h  KeyCodes.h
Common/engine/scene/: SceneBase.cpp  SceneBase.h  SceneBase.inl  TestScene.cpp  TestScene.h
Common/engine/scene_objects/: BaseObject.cpp  BaseObject.h  Camera.cpp  Camera.h  Light.cpp  Light.h  MeshObject.cpp  MeshObject.h  Object.cpp  Object.h  PrimitiveObject.cpp  PrimitiveObject.h  PrimitiveObject.inl
Common/shaders/: Blinn-PhongShading.frag  Blinn-PhongShading.vert  DeferredPhong.frag  DeferredPhong.vert  DiffuseShader.frag  FSQ.frag  FSQ.vert  FaceNormalVertexShader.vert  Light.frag  PhongLighting.frag  PhongShading.frag  PhongShading.vert
Common/shaders/EngineShader/: DebugShader.frag  DeferredRender.frag  DeferredRender.vert  FSQ.vert
Common/shaders/TestShaders/: Default.frag
Common/textures/: grid.ppm
